--- a/CVgrid.html
+++ b/CVgrid.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="CVgrid.css">
 </head>
 <body>
+    <script src="CV.js"></script>
+    <button onclick="myName()">What is my name?</button>
     <div class="container">
         <div class="item1">Erlich Alon- Industrial Engineering and Management, BGU, looking for a professional student position
         </div>
