--- a/CVgrid.html
+++ b/CVgrid.html
@@ -41,6 +41,26 @@
             October 2019- October 2020</br>
             BSc student Certificate of Excellence award: Dean's Outstanding
         </div>
+        <div class="item7 "><h2>Contact Form</h2>
+            <form >
+                <label for="name">Name (4 to 8 characters):</label>
+                <input type="text" id="name" name="name" required minlength="4" maxlength="8" size="10"> <br>
+                <p id="demo"></p>
+
+                <label for="lname">Last Name (4 to 8 characters):</label>
+                <input type="text" id="lname" name="name" required minlength="4" maxlength="8" size="10"><br>
+                <p id="demo2"></p>
+
+                <label for="subject">Subject</label><br>
+                <textarea id="subject" name="subject" required minlength="20" placeholder="Write something.." style="height:100px"></textarea><br>
+                <button onclick="myFunction()">OK</button>
+                <p id="demo3"></p>
+            </form>
+        </div>
+        <div class="item8 "><h2>Linkedin</h2>
+            <a href="https://www.linkedin.com/in/alon-erlich-14782b213/">My Linkedin Profile</a>
+        </div>
+
     </div>
 </body>
 </html>
